--- a/config.yml
+++ b/config.yml
@@ -38,17 +38,17 @@ installed_extras:
 # Intranet Modules
 checkpoint_modules:
   - common
-  - administration
-  - audit
-  - authentication
-  - blocks
-  - contexts
-  - development  
-  - web_services
-  - forms
-  - digital_assets
-  - migration
-  - multilingual
-  - secure 
-  - lifecycle
-  - displays
+#  - administration
+#  - audit
+#  - authentication
+#  - blocks
+#  - contexts
+#  - development  
+#  - web_services
+#  - forms
+#  - digital_assets
+#  - migration
+#  - multilingual
+#  - secure 
+#  - lifecycle
+#  - displays
