--- a/provisioning/roles/checkpoint/tasks/drupal.yml
+++ b/provisioning/roles/checkpoint/tasks/drupal.yml
@@ -18,7 +18,7 @@
 - name: Check out Checkpoint profile
   git: >
     repo={{ checkpoint_repo_url }}
-    version={{ checkpoint_core_version }}
+    version={{ checkpoint_version }}
     update={{ checkpoint_version }}
     dest={{ drupal_core_path }}/profiles/checkpoint/
 
