--- a/config/php.yml
+++ b/config/php.yml
@@ -14,7 +14,7 @@ php_enable_php_fpm: false
 php_executable: "php"
 
 # OpCache settings (useful for PHP >=5.5).
-php_opcache_enabled_in_ini: true
+php_opcache_enabled_in_ini: false
 php_opcache_enable: "1"
 php_opcache_enable_cli: "0"
 php_opcache_memory_consumption: "96"
@@ -26,7 +26,7 @@ php_opcache_revalidate_freq: "2"
 php_opcache_max_file_size: "0"
 
 # APC settings (useful for PHP <5.5).
-php_enable_apc: false
+php_enable_apc: true
 php_apc_enabled_in_ini: false
 php_apc_cache_by_default: "1"
 php_apc_shm_size: "96M"
