--- a/config/php.yml
+++ b/config/php.yml
@@ -14,10 +14,10 @@ php_enable_php_fpm: false
 php_executable: "php"
 
 # OpCache settings (useful for PHP >=5.5).
-php_opcache_enabled_in_ini: false
+php_opcache_enabled_in_ini: true
 php_opcache_enable: "1"
 php_opcache_enable_cli: "0"
-php_opcache_memory_consumption: "96"
+php_opcache_memory_consumption: "192"
 php_opcache_interned_strings_buffer: "16"
 php_opcache_max_accelerated_files: "4096"
 php_opcache_max_wasted_percentage: "5"
@@ -41,18 +41,18 @@ php_expose_php: "On"
 php_memory_limit: "1024M"
 php_max_execution_time: "600"
 php_max_input_time: "600"
-php_max_input_vars: "1000"
-php_realpath_cache_size: "32K"
+php_max_input_vars: "4000"
+php_realpath_cache_size: "1024K"
 php_upload_max_filesize: "64M"
 php_post_max_size: "32M"
 php_date_timezone: "America/Chicago"
 
-php_sendmail_path: "/usr/sbin/sendmail -t -i"
+php_sendmail_path: "/usr/sbin/sendmail -t"
 php_short_open_tag: false
 
 php_error_reporting: "E_ALL & ~E_DEPRECATED & ~E_STRICT"
 php_display_errors: "On"
-php_display_startup_errors: "Off"
+php_display_startup_errors: "On"
 
 php_packages:
   - php5
